force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDLicenseValidation__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseValidation__c</fullName>
    <description>Identifies if SDL is valid.</description>
    <formula>IF(OCE__IsTDDDLicenseExemption__c, 
   true,
   AND(
     OCE__TDDDLicense__c != null,
     OCE__IsTDDDLicenseStatusActive__c,
     DATEVALUE(OCE__TDDDExpirationDate__c) &gt;= TODAY()
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL Validation</label>
    <type>Checkbox</type>
</CustomField>