force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDLicenseValidationIcon__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseValidationIcon__c</fullName>
    <description>SDL validation icon</description>
    <formula>IF(
    OCE__IsTDDDLicenseExemption__c,
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-Exempt.png&quot;, &quot;&quot;, 14, 68),

IF( 
    not(OCE__TDDDLicenseValidation__c),
    IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-None.png&quot;, &quot;&quot;, 14, 68),

CASE(
    OCE__TDDDSubcategory__c,
    &quot;02&quot;, IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-C2.png&quot;, &quot;&quot;, 14, 68),
    &quot;03&quot;, IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-C3.png&quot;, &quot;&quot;, 14, 68),
    &quot;12&quot;, IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-LC2.png&quot;, &quot;&quot;, 14, 68),
    &quot;13&quot;, IMAGE(&quot;/resource/OCE__ApolloIcons/png/TDDD-LC3.png&quot;, &quot;&quot;, 14, 68),
    &quot;&quot;   
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL Validation Icon</label>
    <type>Text</type>
</CustomField>