force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDLimitedCategoryProducts__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLimitedCategoryProducts__c</fullName>
    <description>JSON string that contains list of SDL category products</description>
    <label>SDL Limited Category Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>