force-app/main/default/objects/OCE__Address__c/fields/OCE__UniqueAddressCriteriaFormula__c.field-meta.xml
<CustomField>
    <fullName>OCE__UniqueAddressCriteriaFormula__c</fullName>
    <description>This field used to config unique fields involved in validation. Please make sure that you use correct format to set up this fields. Use next format:
TRIM(LOWER( FieldName__c ))
In case if use need to add more than one field please add &apos; &amp; &apos; in the beginning on the expression and put it to new line.
Example: 
&amp; TRIM(LOWER( FieldName__c ))
Note: Do not use any other formula expression but from example. Make sure that any field placed in new line. Allowed formula expression to use &apos;&amp;&apos;, &apos;TRIM&apos;, &apos;LOWER&apos;, &apos;(&apos;, &apos;)&apos;</description>
    <formula>TRIM(LOWER( Name ))
&amp; TRIM(LOWER( OCE__AddressLine2__c ))
&amp; TRIM(LOWER( OCE__AddressLine3__c ))
&amp; TRIM(LOWER( OCE__AddressLine4__c ))
&amp; TRIM(LOWER( OCE__City__c ))
&amp; TRIM(LOWER( TEXT( OCE__CountryCode__c )))
&amp; TRIM(LOWER( TEXT( OCE__StateCode__c )))
&amp; TRIM(LOWER( OCE__ZipCode__c ))</formula>
    <label>Unique Address Criteria Formula</label>
    <type>Text</type>
</CustomField>