force-app/main/default/objects/OCE__Address__c/fields/OCE__Zip4__c.field-meta.xml
<CustomField>
    <fullName>OCE__Zip4__c</fullName>
    <description>ZIP code extension field</description>
    <inlineHelpText>ZIP code extension field</inlineHelpText>
    <label>Zip4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>