force-app/main/default/objects/OCE__Address__c/fields/OCE__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__ZipCode__c</fullName>
    <description>Zip Code of the address. This is used to store all zip codes of an address in the system.</description>
    <inlineHelpText>Zip Code of the address. This is used to store all zip codes of an address in the system.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>