force-app/main/default/objects/OCE__Address__c/listViews/OCE__Addresses_for_validation.listView-meta.xml
<ListView>
    <fullName>OCE__Addresses_for_validation</fullName>
    <columns>NAME</columns>
    <columns>OCE__Suite__c</columns>
    <columns>OCE__City__c</columns>
    <columns>OCE__StateCode__c</columns>
    <columns>OCE__CountryCode__c</columns>
    <columns>OCE__IsValidated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCE__IsValidated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Addresses for validation</label>
</ListView>