force-app/main/default/objects/OCE__Address__c/listViews/OCE__All.listView-meta.xml
<ListView>
    <fullName>OCE__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>